--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@babel/preset-env": "^7.14.2",
     "@vue/compiler-sfc": "^3.0.11",
     "autoprefixer": "^10.2.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.5",
+    "eslint": "^7.27.0",
+    "eslint-plugin-vue": "^7.9.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "postcss": "^8.3.0",
